--- a/monitoring/manifests/kubernetes-serviceMonitorKubeScheduler.yaml
+++ b/monitoring/manifests/kubernetes-serviceMonitorKubeScheduler.yaml
@@ -2,7 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: kube-scheduler
+    app.kubernetes.io/name: kube-scheduler
+    app.kubernetes.io/part-of: kube-prometheus
   name: kube-scheduler
   namespace: monitoring
 spec:
@@ -13,10 +14,10 @@ spec:
     scheme: https
     tlsConfig:
       insecureSkipVerify: true
-  jobLabel: k8s-app
+  jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
     - kube-system
   selector:
     matchLabels:
-      k8s-app: kube-scheduler
+      app.kubernetes.io/name: kube-scheduler
