--- a/monitoring/manifests/grafana-config.yaml
+++ b/monitoring/manifests/grafana-config.yaml
@@ -1,8 +1,15 @@
 apiVersion: v1
-data:
-  grafana.ini: W2F1dGguYW5vbnltb3VzXQplbmFibGVkID0gdHJ1ZQo=
 kind: Secret
 metadata:
+  labels:
+    app.kubernetes.io/component: grafana
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/part-of: kube-prometheus
+    app.kubernetes.io/version: 8.3.3
   name: grafana-config
   namespace: monitoring
+stringData:
+  grafana.ini: |
+    [auth.anonymous]
+    enabled = true
 type: Opaque
