--- a/monitoring/manifests/kubernetes-serviceMonitorCoreDNS.yaml
+++ b/monitoring/manifests/kubernetes-serviceMonitorCoreDNS.yaml
@@ -2,15 +2,21 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: coredns
+    app.kubernetes.io/name: coredns
+    app.kubernetes.io/part-of: kube-prometheus
   name: coredns
   namespace: monitoring
 spec:
   endpoints:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     interval: 15s
+    metricRelabelings:
+    - action: drop
+      regex: coredns_cache_misses_total
+      sourceLabels:
+      - __name__
     port: metrics
-  jobLabel: k8s-app
+  jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
     - kube-system
